[package]
name = "draffle-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "draffle"
path = "src/main.rs"

[dependencies]
anchor-lang = "0.30.1"
anchor-client = "0.30.1"
anyhow = "1.0"
bincode = "1.3.3"
clap = { version = "3.0.5", features = ["derive"] }
draffle = { path = "../programs/draffle" }
rand = "0.8.0"
chrono = "0.4.19"
shellexpand = "2.1.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0", features = ["no-entrypoint"] }
