[package]
name = "dispenser"
version = "0.1.0"
description = "Dispenser program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dispenser"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
production = []
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[dev-dependencies]
assert_matches = "1.5.0"
bincode = "1.3.3"
bytemuck = "1.4.0"
